message RpbErrorResp {
    required bytes errmsg = 1;
    required uint32 errcode = 2;
}

message RpbGetReq {
    required bytes bucket = 1;
    required bytes key = 2;
    optional uint32 r = 3;
}

message RpbGetResp {
    repeated RpbContent content = 1;
    optional bytes vclock = 2;
}

message RpbLink {
    optional bytes bucket = 1;
    optional bytes key = 2;
    optional bytes tag = 3;
}

message RpbPair {
    required bytes key = 1;
    optional bytes value = 2;
}

message RpbContent {
    required bytes value = 1;
    optional bytes content_type = 2;     // the media type/format
    optional bytes charset = 3;
    optional bytes content_encoding = 4;
    optional bytes vtag = 5;
    repeated RpbLink links = 6;          // links to other resources
    optional uint32 last_mod = 7;
    optional uint32 last_mod_usecs = 8;
    repeated RpbPair usermeta = 9;       // user metadata stored with the object
}

message RpbPutReq {
    required bytes bucket = 1;
    required bytes key = 2;
    optional bytes vclock = 3;
    required RpbContent content = 4;
    optional uint32 w = 5;
    optional uint32 dw = 6;
    optional bool return_body = 7;
}

message RpbPutResp {
    repeated RpbContent contents = 1;
    optional bytes vclock = 2;        // the opaque vector clock for the object
}

message RpbDelReq {
    required bytes bucket = 1;
    required bytes key = 2;
    optional uint32 rw = 3;
}

message RpbListBucketsResp {
    repeated bytes buckets = 1;
}

message RpbListKeysReq {
    required bytes bucket = 1;
}

message RpbListKeysResp {
    repeated bytes keys = 1;
    optional bool done = 2;
}

message RpbGetClientIdResp {
    required bytes client_id = 1; // Client id in use for this connection
}

message RpbSetClientIdReq {
    required bytes client_id = 1; // Client id to use for this connection
}

message RpbGetServerInfoResp {
    optional bytes node = 1;
    optional bytes server_version = 2;
}